Fix overflow issues with height in scroll container

--- a/frontend/src/assets/styles/reset.css
+++ b/frontend/src/assets/styles/reset.css
@@ -20,7 +20,7 @@ html {
 
 body {
   flex-grow: 1;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 a,
@@ -90,7 +90,7 @@ textarea {
 /* root styles */
 #root {
   display: grid;
-  min-height: 100vh;
+  height: 100vh;
   min-width: 20rem;
   background-color: var(--c-bg-primary);
 }
